--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,11 +1,25 @@
 #需要启用的插件(插件名称为插件类m)
-plugins:
-  Weather
+plugins: "Weather,Boot"
 
 WebHook:
   RSAToken: ""
 
 Weather:
-  WeatherAPI: ""
+  WeatherAPI: "https://wis.qq.com/weather/common?source=pc&province=湖北&city=孝感&county=孝南区&weather_type=observe"
   TokenKey: ""
   APIToken: ""
+
+server:
+  port: 8081
+
+spring:
+  application:
+    name: GP
+
+BotAddress: "http:"
+
+corePoolSize: 5
+maxPoolSize: 30
+keepAliveTime: 30
+queueCapacity: 100
+threadName: "ec"
