--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,16 @@
             <version>1.18.24</version>
         </dependency>
         <dependency>
+            <groupId>org.ecturing.plugins</groupId>
+            <artifactId>Weather</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.ecturing</groupId>
+            <artifactId>PluginsInterface</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
@@ -46,7 +56,6 @@
             </exclusions>
         </dependency>
     </dependencies>
-
     <dependencyManagement>
         <dependencies>
             <dependency>
