插件运行正常

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,10 @@
             <artifactId>spring-boot-starter-websocket</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.24</version>
@@ -85,7 +89,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>2.3.7.RELEASE</version>
                 <configuration>
-                    <mainClass>com.ecturing.Gp.WebHookApplication</mainClass>
+                    <mainClass>com.ecturing.Gp.GpApplication</mainClass>
                 </configuration>
                 <executions>
                     <execution>
