--- a/pom.xml
+++ b/pom.xml
@@ -30,10 +30,6 @@
             <artifactId>spring-boot-starter-websocket</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-mongodb</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.24</version>
@@ -46,6 +42,16 @@
         <dependency>
             <groupId>org.ecturing</groupId>
             <artifactId>PluginsInterface</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.ecturing</groupId>
+            <artifactId>Translate</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.ecturing</groupId>
+            <artifactId>News</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
