--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,3 @@
-#需要启用的插件(插件名称为插件类m)
-plugins: "Weather"
-
 WebHook:
   RSAToken: ""
 
@@ -28,4 +25,5 @@ threadName: "Plugin:"
 logging:
   level:
     root: info
-    com.ecturing.Gp: debug
+    com.ecturing.Gp: info
+
