--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.example</groupId>
-    <artifactId>WebHook</artifactId>
+    <groupId>com.ecturing</groupId>
+    <artifactId>QBotServer</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>WebHook</name>
     <description>Demo project for Spring Boot</description>
